<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background"
    android:orientation="vertical"
    tools:context="www.qisu666.com.activity.ChargingFilterActivity">

    <include layout="@layout/layout_title_primary" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/content_bg"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/default_padding">

                <TextView
                    style="@style/TextView_Subtitle_Black"
                    android:text="@string/charging_filter_interface" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rb_interface_all"
                        style="@style/Filter_RadioButton"
                        android:layout_marginRight="@dimen/default_margin_lnr"
                        android:text="@string/charging_filter_all" />

                    <RadioButton
                        android:id="@+id/rb_interface_1"
                        style="@style/Filter_RadioButton"
                        android:text="@string/charging_filter_interface_1" />

                    <RadioButton
                        android:id="@+id/rb_interface_2"
                        style="@style/Filter_RadioButton"
                        android:layout_marginLeft="@dimen/default_margin_lnr"
                        android:text="@string/charging_filter_interface_2" />

                </RadioGroup>

            </LinearLayout>

            <View style="@style/Divide_Horizontal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/default_padding">

                <TextView
                    style="@style/TextView_Subtitle_Black"
                    android:text="@string/charging_filter_carr" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rb_carr_all"
                        style="@style/Filter_RadioButton"
                        android:layout_marginRight="@dimen/default_margin_lnr"
                        android:text="@string/charging_filter_all" />

                    <RadioButton
                        android:id="@+id/rb_carr_1"
                        style="@style/Filter_RadioButton"
                        android:text="@string/charging_filter_carr_1" />

                    <RadioButton
                        android:id="@+id/rb_carr_2"
                        style="@style/Filter_RadioButton"
                        android:layout_marginLeft="@dimen/default_margin_lnr"
                        android:text="@string/charging_filter_carr_2" />

                </RadioGroup>

            </LinearLayout>

            <View style="@style/Divide_Horizontal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/default_padding">

                <TextView
                    style="@style/TextView_Subtitle_Black"
                    android:text="@string/charging_filter_mode" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rb_mode_all"
                        style="@style/Filter_RadioButton"
                        android:layout_marginRight="@dimen/default_margin_lnr"
                        android:text="@string/charging_filter_all" />

                    <RadioButton
                        android:id="@+id/rb_mode_1"
                        style="@style/Filter_RadioButton"
                        android:text="@string/charging_filter_mode_1" />

                    <RadioButton
                        android:id="@+id/rb_mode_2"
                        style="@style/Filter_RadioButton"
                        android:layout_marginLeft="@dimen/default_margin_lnr"
                        android:text="@string/charging_filter_mode_2" />

                </RadioGroup>

            </LinearLayout>

            <View style="@style/Divide_Horizontal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/default_padding">

                <TextView
                    style="@style/TextView_Subtitle_Black"
                    android:text="@string/charging_filter_type" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rb_type_all"
                        style="@style/Filter_RadioButton"
                        android:layout_marginRight="@dimen/default_margin_lnr"
                        android:text="@string/charging_filter_all" />

                    <RadioButton
                        android:id="@+id/rb_type_1"
                        style="@style/Filter_RadioButton"
                        android:text="@string/charging_filter_type_1" />

                    <RadioButton
                        android:id="@+id/rb_type_2"
                        style="@style/Filter_RadioButton"
                        android:layout_marginLeft="@dimen/default_margin_lnr"
                        android:text="@string/charging_filter_type_2" />

                </RadioGroup>

            </LinearLayout>

            <View style="@style/Divide_Horizontal" />

            <LinearLayout
                style="@style/LL_Item"
                android:clickable="false">

                <TextView
                    style="@style/TextView_Subtitle_Black_Weight"
                    android:text="@string/charging_filter_free_parking" />

                <com.kyleduo.switchbutton.SwitchButton
                    android:id="@+id/sb_free_parking"
                    style="@style/Filter_SwitchButton" />

            </LinearLayout>

            <View style="@style/Divide_Horizontal" />

            <LinearLayout
                style="@style/LL_Item"
                android:clickable="false">

                <TextView
                    style="@style/TextView_Subtitle_Black_Weight"
                    android:text="@string/charging_filter_all_day" />

                <com.kyleduo.switchbutton.SwitchButton
                    android:id="@+id/sb_all_day"
                    style="@style/Filter_SwitchButton" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/selector_primary_btn_b"
        android:padding="@dimen/default_padding"
        android:text="确认"
        android:textColor="@color/white"
        android:textSize="@dimen/text_title" />

</LinearLayout>
